--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
     "@react-navigation/native-stack": "^7.3.25",
     "expo": "53.0.22",
     "expo-status-bar": "~2.2.3",
+    "lucide-react-native": "^0.542.0",
     "nativewind": "latest",
     "react": "19.0.0",
     "react-native": "0.79.5",
     "react-native-reanimated": "~3.17.4",
     "react-native-safe-area-context": "5.4.0",
-    "react-native-screens": "^4.15.2",
+    "react-native-screens": "~4.11.1",
     "zod": "^4.0.17",
     "zustand": "^5.0.8"
   },
