--- a/package.json
+++ b/package.json
@@ -11,9 +11,12 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@expo/vector-icons": "^15.0.2",
     "@react-navigation/bottom-tabs": "^7.4.6",
+    "@react-navigation/elements": "^2.6.4",
     "@react-navigation/native": "^7.1.17",
-    "@react-navigation/native-stack": "^7.3.25",
+    "@react-navigation/native-stack": "^7.3.26",
+    "@react-navigation/stack": "^7.4.8",
     "expo": "^54.0.9",
     "expo-status-bar": "~3.0.8",
     "lucide-react-native": "^0.542.0",
