--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
+    "@react-native-async-storage/async-storage": "^2.2.0",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/elements": "^2.6.4",
     "@react-navigation/native": "^7.1.17",
     "@react-navigation/native-stack": "^7.3.26",
     "@react-navigation/stack": "^7.4.8",
+    "@supabase/supabase-js": "^2.74.0",
     "expo": "^54.0.9",
     "expo-status-bar": "~3.0.8",
     "lucide-react-native": "^0.542.0",
@@ -27,6 +29,7 @@
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "^4.15.2",
     "react-native-svg": "15.12.1",
+    "react-native-url-polyfill": "^3.0.0",
     "react-native-worklets": "0.5.1",
     "zod": "^4.0.17",
     "zustand": "^5.0.8"
