--- a/app.json
+++ b/app.json
@@ -3,28 +3,24 @@
     "name": "RoomSync",
     "slug": "roomsync-dev",
     "version": "1.0.0",
-
     "web": {
       "favicon": "./src/assets/favicon.png"
     },
-
     "experiments": {
       "tsconfigPaths": true
     },
-
     "plugins": [],
-
     "orientation": "portrait",
     "icon": "./src/assets/icon.png",
-
     "userInterfaceStyle": "light",
-
     "splash": {
       "image": "./src/assets/splash.png",
       "resizeMode": "contain",
       "backgroundColor": "#ffffff"
     },
-    "assetBundlePatterns": ["**/*"],
+    "assetBundlePatterns": [
+      "**/*"
+    ],
     "ios": {
       "supportsTablet": true
     },
@@ -32,7 +28,8 @@
       "adaptiveIcon": {
         "foregroundImage": "./src/assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
-      }
+      },
+      "package": "com.anonymous.roomsyncdev"
     }
   }
 }
