--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "my-expo-app",
   "version": "1.0.0",
   "scripts": {
-    "android": "expo start --android",
-    "ios": "expo start --ios",
+    "android": "expo run:android",
+    "ios": "expo run:ios",
     "start": "expo start --tunnel",
     "prebuild": "expo prebuild",
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" && prettier -c \"**/*.{js,jsx,ts,tsx,json}\"",
@@ -13,6 +13,7 @@
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
     "@react-native-async-storage/async-storage": "^2.2.0",
+    "@react-native-community/datetimepicker": "^8.4.5",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/elements": "^2.6.4",
     "@react-navigation/native": "^7.1.17",
@@ -20,11 +21,14 @@
     "@react-navigation/stack": "^7.4.8",
     "@supabase/supabase-js": "^2.74.0",
     "expo": "^54.0.9",
+    "expo-image-picker": "^17.0.8",
+    "expo-location": "^19.0.7",
     "expo-status-bar": "~3.0.8",
     "lucide-react-native": "^0.542.0",
     "nativewind": "latest",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-maps": "^1.26.14",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "^4.15.2",
