--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "nativewind": "latest",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-draggable-flatlist": "^4.0.3",
     "react-native-maps": "^1.26.14",
     "react-native-reanimated": "~4.1.0",
     "react-native-safe-area-context": "~5.6.0",
