--- a/.gitignore
+++ b/.gitignore
@@ -11,10 +11,12 @@ npm-debug.*
 web-build/
 ios
 android
+
 .env
+emulator.bat
 
 CLAUDE.md
-.claude/
+.claude
 .claude/settings.local.json
 
 # macOS
@@ -22,3 +24,4 @@ CLAUDE.md
 
 # Temporary files created by Metro to check the health of the file watcher
 .metro-health-check*
+/.idea/
