--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "prebuild": "expo prebuild",
     "lint": "eslint \"**/*.{js,jsx,ts,tsx}\" && prettier -c \"**/*.{js,jsx,ts,tsx,json}\"",
     "format": "eslint \"**/*.{js,jsx,ts,tsx}\" --fix && prettier \"**/*.{js,jsx,ts,tsx,json}\" --write",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "emulator": "emulator.bat"
   },
   "dependencies": {
     "@expo/vector-icons": "^15.0.2",
@@ -31,6 +32,7 @@
     "react-native-css-interop": "^0.2.1",
     "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "^2.28.0",
+    "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-maps": "1.20.1",
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
