--- a/package.json
+++ b/package.json
@@ -49,10 +49,11 @@
     "@babel/core": "^7.20.0",
     "@types/react": "^19.1.13",
     "babel-preset-expo": "^54.0.2",
-    "eslint": "^9.25.1",
+    "eslint": "^8.57.1",
     "eslint-config-expo": "~10.0.0",
     "eslint-config-prettier": "^10.1.2",
-    "prettier": "^3.2.5",
+    "prettier": "^3.6.2",
+    "prettier-eslint": "^16.4.2",
     "prettier-plugin-tailwindcss": "^0.5.11",
     "tailwindcss": "^3.4.0",
     "typescript": "~5.9.2"
