--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "nativewind": "^4.2.1",
     "react": "19.1.0",
     "react-native": "0.81.4",
+    "react-native-chart-kit": "^6.12.0",
     "react-native-css-interop": "^0.2.1",
     "react-native-draggable-flatlist": "^4.0.3",
     "react-native-gesture-handler": "^2.28.0",
@@ -39,7 +40,8 @@
     "react-native-reanimated": "~4.1.1",
     "react-native-safe-area-context": "~5.6.0",
     "react-native-screens": "^4.15.2",
-    "react-native-svg": "15.12.1",
+    "react-native-svg": "^15.14.0",
+    "react-native-svg-charts": "^5.4.0",
     "react-native-url-polyfill": "^3.0.0",
     "react-native-worklets": "0.5.1",
     "zod": "^4.1.12",
