--- a/package.json
+++ b/package.json
@@ -24,8 +24,11 @@
     "@react-navigation/stack": "^7.4.8",
     "@supabase/supabase-js": "^2.74.0",
     "expo": "54.0.13",
+    "expo-asset": "~12.0.9",
+    "expo-image": "~3.0.10",
     "expo-image-picker": "^17.0.8",
     "expo-location": "^19.0.7",
+    "expo-splash-screen": "~31.0.10",
     "expo-status-bar": "~3.0.8",
     "lucide-react-native": "^0.542.0",
     "nativewind": "^4.2.1",
